# wastask

./: .env  .env.example  .gitignore  CLAUDE.md  CLAUDE_WASTASK_GUIDE.md  DEPLOYMENT_OPTIONS.md  Dockerfile  Dockerfile.wastask  GITHUB_DEPLOY_GUIDE.md  Makefile  NETWORK_SETUP.md  OBJETIVO_WASTASK.md  PORTAINER_DEPLOY_GUIDE.md  README.md  RESUMO_IMPLEMENTACAO.md  STATUS.md  WASTINTAS_DEPLOY.md  bling_erp_integration_manager_analysis.json  check-endpoints.sh  check_all_tasks.py  cleanup_old_tables.sql  database.py  database_manager.py  database_schema.sql  database_schema_new.sql  demo_prd_complete.py  demo_prd_to_system.py  deploy-simple.yml  deploy-ssh-commands.sh  deploy-vps-final.sh  doc_fetcher.py  docker-compose-local.yml  docker-compose.yml  env.example  expand_task_17.json  init.sql  insert_subtasks.py  nginx.conf  portainer-stack.yml  portainer-swarm-stack.yml  (+50 more)
agents/: __init__.py
ai_engine/: ai_task_generator.py  intelligent_task_generator.py
api/: __init__.py  auth.py  main.py
cli/: __init__.py  main.py
config/: __init__.py  api_settings.py  settings.py
core/: __init__.py  models.py
demos/: demo_automatico.py  demo_com_persistencia.py  demo_dinamico.py  demo_inteligente.py  demo_postgres.py  demo_simples.py  demo_wastask.py  exemplo_interativo.py
doc_cache/: drizzle-orm.json  postgresql.json  react-router-v7.json  shadcn-ui.json  typescript.json  zod.json
docs/: FLUXO_COMPLETO_WASTASK.md  INDEX.md  README.md  README_UV.md  SISTEMA_INTELIGENTE.md  bling_integration_prd.md  database_cleanup_log.md  database_design_analysis.md  database_refactor_progress.md  docs_organization_summary.md  example_prd_snake_game.md  migrations_implementation_summary.md  task_expansion_progress.md  test_results.md
integrations/: context7_client.py
migrations/: 001_initial_schema.sql  002_add_triggers.sql  __init__.py  (+3 more)
(+42 files in other folders)
