[project]
name = "wastask"
version = "0.1.0"
description = "AI-native project management system powered by Google ADK"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "WasTask Team", email = "team@wastask.ai"}
]
keywords = ["project-management", "ai", "agents", "google-adk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
    "aiohttp>=3.12.13",
    "asyncpg>=0.30.0",
    "psutil>=5.9.0",
]

[project.scripts]
wastask = "wastask.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wastask"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "YTT", "B", "C4", "DTZ", "T10", "ICN", "PIE", "PT", "SIM"]
ignore = ["E501", "B008"]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]
